--- a/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
+++ b/Ruby-China-iOS/Ruby-China-iOS/Base.lproj/Main.storyboard
@@ -98,6 +98,9 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="registerButtonClicked:" destination="HLG-LC-3EY" eventType="touchUpInside" id="blJ-gs-Pfg"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cKs-yc-cQt">
                                 <rect key="frame" x="108" y="195" width="153" height="30"/>
